<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitEventActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="60dp"
            android:background="@drawable/lavender_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseAnAction"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/lavender"/>


            <Button
                android:id="@+id/buttonEventList"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"
                android:onClick="eventList"
                android:text="@string/viewEventList"/>
            <Button
                android:id="@+id/buttonStatistics"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"
                android:onClick="viewStatistics"
                android:text="@string/viewStatistics"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>