<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitEventActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/lavender_border">

            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"
                android:ems="10"
                android:hint="@string/eventTitle"
                android:inputType="text"/>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/description"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"
                android:ems="10"
                android:inputType="text" />

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:gravity="start|center_vertical"
                android:background="@drawable/lavender_border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/uploadData"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/lavender"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/uploadimg"
                android:id="@+id/uploadImage"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/buttonSubmitEvent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                app:cornerRadius = "20dp"
                android:onClick="SubmitEvent"
                android:text="@string/submit"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:backgroundTint="@color/lavender"
                app:tint = "@color/white"
                android:src="@drawable/baseline_arrow_back_24" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</ScrollView>